# knx-installer

./: ChangeLog  Doxyfile  Makefile.in  README  configure  configure.in  configure.in.in  fix-usb-install  kanotix-installer  knoppix-installer  knx-installer  knx-installer.desktop  knxinstaller.kdevelop  knxinstaller.kdevelop.pcs  knxinstaller.kdevses  sidux-installer
debian/: changelog  control  control.in  copyright  dirs  initscripts-kanotix.install  initscripts-kanotix.postinst  initscripts-kanotix.postrm  install  knx-installer.install  knx-installer.links  rules
debian/overrides/: initscripts-kanotix  knx-installer
debian/patches/: utf-8.diff
doc/: Bugs  Makefile.am  Makefile.in  TODO  Ziele
modules/: 00-dialog.bm  00-hd-tools.bm  00-knoppix-utils.bm  00-progress.bm  00-setuser.bm  01-hd.bm  02-swap.bm  03-host.bm  04-user-name-pass.bm  05-services.bm  06-boot.bm  07-system.bm  08-autologin.bm
po/: Makefile.in  cs.po  de.gmo  de.po  es.po  fr.gmo  fr.po  it.gmo  it.po  knxinstaller.pot  po.sh  ru.gmo  ru.po  sk.po  tr.po  uk_UA.po
src/: ExecProcess.cpp  ExecProcess.h  Makefile.am  Makefile.in  kanotix-check-knofig  kanotix-update  knxinstaller-recover  knxinstaller-script  knxinstaller.cpp  knxinstaller.desktop  knxinstaller.h  knxinstaller.lsm  knxinstallerui.rc  knxinstallerwidget.cpp  knxinstallerwidget.h  knxinstallerwidget.loT  knxinstallerwidgetbase.2.ui  knxinstallerwidgetbase.ui  main.cpp
tools/: kanotix-installer-latest-web  knoppix-hd-autoconfig  knoppix-hd-config  knoppix-installer-latest-web  mkext2fs  modutils-knoppix  services.sh
(+15 files in other folders)
